Fix layout distortion in the access section

--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,23 @@ section h2 {
   color: #662843;
 }
 
+.table {
+  text-align: left;
+  color: #fff;
+}
+
+table th {
+  text-align: center;
+}
+
+table td {
+  vertical-align: middle;
+}
+
+table tr:last-child {
+  border-bottom: 1px solid #dee2e6;
+}
+
 /* Card */
 .card {
   background-color: #662843;
